# imu-calib-toolkit

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md
imu_calib_python/: README.md  pyproject.toml
imu_calib_python/data/: static.csv
imu_calib_python/data/example_dataset_bundle/: acc_poses.csv  dataset_manifest.json  gyro_runs.csv  static.csv
imu_calib_python/docs/: 01_项目总览.md  02_IMU误差模型与参数定义.md  03_IMU标定算法说明.md  03_加速度计静止多姿态标定方案.md  04_补偿算法与运行流程.md  05_输入文件与数据采集要求.md  06_使用方法.md  07_迁移说明_旧参考加速度方案到新方案.md  08_开发者补充说明.md  温度标定.md  输入文件要求.md  迁移说明.md
imu_calib_python/examples/: main_demo.py  run_from_csv.py
imu_calib_python/imu_calib/: __init__.py  cli.py  pipelines.py
imu_calib_python/imu_calib/calib/: __init__.py  analyze_acc_allan.py  analyze_allan_common.py  analyze_gyro_allan.py  estimate_gyro_bias.py  estimate_noise_stats.py  extract_static_pose_means.py  fit_acc_multi_pose.py  fit_gyro_C_from_angle_increment.py  fit_gyro_g_sensitivity.py  fit_temperature_bias_model.py  split_km.py
imu_calib_python/imu_calib/io/: __init__.py  export_dataset_bundle.py  load_csv_data.py  load_example_data.py
imu_calib_python/imu_calib/models/: __init__.py  calib_results.py  data_structures.py  options.py
imu_calib_python/tests/: conftest.py  test_acc_fit.py  test_allan.py  test_apply_calibration.py  test_bias.py  test_bundle_io.py  test_csv_errors.py  test_gyro_fit.py  test_partial_loader.py  test_partial_pipeline.py  test_plot_validation.py  test_save_results.py  test_segmentation.py  test_task_runners.py  test_temp_model.py
(+106 files in other folders)
