[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "imu-calib-python"
version = "0.1.0"
description = "Independent Python implementation of the IMU calibration workflow aligned with the MATLAB reference project."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "scipy>=1.10",
  "pandas>=2.0",
  "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
imu-calib = "imu_calib.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["imu_calib*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
